--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* General Reset */
+    /* General Reset */
 * {
   margin: 0;
   padding: 0;
@@ -8,15 +8,15 @@
 body {
   font-family: 'Arial', sans-serif;
   line-height: 1.6;
-  background-color: #f9f9f9;
-  color: #333;
+  background-color: #000000;
+  color: #f6f6f6;
 }
 
 /* Header */
 /* Header */
 header {
   background: #4caf50;
-  color: #fff;
+  color: #000000;
   padding: 10px 0;
 }
 
